...
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/txt_search"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="9"
                        android:hint="@string/hint_type_a_movie_name"/>

                    <ImageView
                        android:id="@+id/img_search"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="onClickSearch"
                        android:src="@android:drawable/ic_menu_search"/>
                </LinearLayout>
...
