<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <fr.castorflex.android.smoothprogressbar.SmoothProgressBar
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/progress_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-2dp"
            android:indeterminate="true"
            android:visibility="invisible"
            app:spb_color="@color/colorAccent"
            app:spb_interpolator="spb_interpolator_accelerate"
            app:spb_mirror_mode="false"
            app:spb_progressiveStart_activated="false"
            app:spb_progressiveStart_speed="1.5"
            app:spb_progressiveStop_speed="3.4"
            app:spb_reversed="false"
            app:spb_sections_count="4"
            app:spb_speed="1.8"
            app:spb_stroke_separator_length="4dp"
            app:spb_stroke_width="4dp"
            />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_movie"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </LinearLayout>
</layout>